
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ EWOULDBLOCK ;
 int FUTEX_WAIT ;
 int O_CLOEXEC ;
 int O_RDWR ;
 int SYS_futex ;
 int dup2 (int,int) ;
 int err (int,char*,...) ;
 scalar_t__ errno ;
 int execl (char*,char*) ;
 int ftx ;
 int open (char*,int) ;
 scalar_t__ parent ;
 int sprintf (char*,char*,long) ;
 int syscall (int ,int ,int ,int ,int ,int ,int ) ;

int childfn()
{
  int fd;
  char buf[128];

  if (syscall(SYS_futex, ftx, FUTEX_WAIT, 0, 0, 0, 0) == -1 &&
      errno != EWOULDBLOCK)
    err(1, "futex");

  sprintf(buf, "/proc/%ld/uid_map", (long)parent);
  fd = open(buf, O_RDWR | O_CLOEXEC);
  if (fd == -1)
    err(1, "open %s", buf);
  if (dup2(fd, 1) != 1)
    err(1, "dup2");


  execl("./zerozeroone", "./zerozeroone");

  return 0;
}
